propuesta mejorada. Si se eliminan los espacios en blanco quedan 6 paginas

--- a/Compromisos.tex
+++ b/Compromisos.tex
@@ -6,7 +6,7 @@ Se asume los siguientes compromisos:
 \begin{itemize}
 
 \item Por lo menos tres artículos en revista internacional indexada
-  A1.
+  A1. Y un artículo divulgativo.
 
 \item Ponencia en evento internacional donde se presentaran los resultados de le
   investigación.
