--- a/Metodologia.tex
+++ b/Metodologia.tex
@@ -1,10 +1,10 @@
 \section{ Metodología Propuesta }
 
-Los elementos teóricos fundamentales del proyecto que queremos desarrollar
+Los elementos teóricos y conceptuales fundamentales del proyecto que queremos desarrollar
 son los siguientes:
 
 \begin{enumerate}
-\item Se asume supersimetría, y una simetría Abeliana de sabor $U(1)_H$ con uno ó varios flavones de cargas $H$.
+\item Se asume supersimetría, y una simetría Abeliana de sabor $U(1)_H$ con uno ó varios flavones $Phi$ de cargas $H$.
 
 \item Para un determinado término del superpotencial (\ref{eq:5}) con carga horizontal $n$ tenemos que, para $\theta=\langle\Phi\rangle$
   \begin{enumerate}
@@ -12,20 +12,19 @@ son los siguientes:
   \item Si $n<0$ el acoplamiento se genera con una supresión $(m_{3/2}/M)\theta^{|n|}\sim 10^{-17}\theta^{|n|}$ para un operador trilineal, y con una supresión $m_{3/2}\theta^{|n|}$ para un operador bilineal.
   \item Si $n$ es fraccionario el operador queda prohibido.
   \end{enumerate}
-Usando estás posibilidades debemos fijar las cargas $H$ libres para obtener el modelo supersimétrico con las propiedades adecuadas. Las condiciones para obtener modelos con solo términos trilineales de ruptura de paridad $R$ con violación de número leptónico ya han sido establecidas en \cite{Sierra:2009zq}.
-
- En el caso de $n<0$ nos interesa analizar las restricciones que los experimentos sobre rayos cósmicos actuales y futuros imponen sobre dicho modelo, mientras que en el caso en que los operadores con acoplamientos $\lambda$ tengan cargas con $n\ge 0$, nos interesa explorar las predicciones que dicho modelo tenga para el LHC.
+Usando estás posibilidades debemos fijar las cargas $H$ libres para obtener el modelo supersimétrico con las propiedades adecuadas. %Las condiciones para obtener modelos con solo términos trilineales de ruptura de paridad $R$ con violación de número leptónico ya han sido establecidas en \cite{Sierra:2009zq}.
+En el caso de $n<0$ nos interesa analizar las restricciones que los experimentos sobre rayos cósmicos actuales y futuros imponen sobre dicho modelo, mientras que en el caso en que los operadores con acoplamientos $\lambda$ tengan cargas con $n\ge 0$, nos interesa explorar las predicciones que dicho modelo tenga para el LHC.
 \end{enumerate}
 
-Para un modelo que incluya mecanismos de generación radiativa de masas de neutrinos se determina el espacio de parámetros compatible con los datos experimentales sobre física de neutrinos, se calculan los branchings de decaimiento y las secciones eficaces y se establecen correlaciones entre estos observables y los datos de física de neutrinos [7]. Para el caso de VBPR todo esto ya ha sido implementado en el programa computacional SPheno [8]. Finalmente se hace una simulación con PYTHIA [9] de la factibilidad de descubrir el modelo en aceleradores, como hemos venido haciendo con VBPR en [1], y de la viabilidad de medir las correlaciones establecidas, que es uno de los objetivos del proyecto.
+Para un modelo que incluya mecanismos de generación radiativa de masas de neutrinos se determina el espacio de parámetros compatible con los datos experimentales sobre física de neutrinos, se calculan los branchings de decaimiento y las secciones eficaces y se establecen correlaciones entre estos observables y los datos de física de neutrinos [7]. Finalmente se hace una simulación con PYTHIA [9] de la factibilidad de descubrir el modelo en aceleradores, como hemos venido haciendo con VBPR en [1], y de la viabilidad de medir las correlaciones establecidas, que es uno de los objetivos del proyecto.
 
-Como hemos ya hecho en [3], obtendremos resultados numéricos para los flujos de rayos cósmicos  producidos en el decaimiento del CMOI usando PYTHIA. A partir de los resultados se analizará el tiempo de vida del CMOI  en términos de su masa con el fin de obtener y analizar cuáles serían las regiones del espacio de parámetros restringidas o excluidas por los experimentos de rayos cósmicos.
+ A partir de los resultados se analizará el tiempo de vida del CMOI  en términos de su masa con el fin de obtener y analizar cuáles serían las regiones del espacio de parámetros restringidas o excluidas por los experimentos de rayos cósmicos. 
 
-En este proyecto haremos una implementación del modelo de seesaw radiativo en Micromegas  con el cual se pueden hacer los cálculos de densidad de reliquia, secciones eficaces, amplitudes de decaimiento, etc. Una vez establecidas las regiones del espacio de parámetros relevantes, se procederá con el método para mecanismos de generación radiativa de masas de neutrinos descrito anteriormente.
+%Una vez establecidas las regiones del espacio de parámetros relevantes, se procederá con el método para mecanismos de generación radiativa de masas de neutrinos descrito anteriormente.
 
-El modelo de seesaw raditivo se estudiara a traves del paquete computacinal micrOMEGAs, con el cual se hacen actualmente a nivel mundial los calculos de densidad de reliquia, secciones eficaces, amplitudes de decaimiento, entre otros en modelos genéricos que pretendan tener canddatos para materia oscura. Además, desarrollaremos scripts que nos permitan hacer el estudio del comportamiento del sector de neutrinos del modelo, para poder compararlo con las observaciones.
+%El modelo de seesaw raditivo se estudiara a traves del paquete computacinal micrOMEGAs, con el cual se hacen actualmente a nivel mundial los calculos de densidad de reliquia, secciones eficaces, amplitudes de decaimiento, entre otros en modelos genéricos que pretendan tener canddatos para materia oscura. Además, desarrollaremos scripts que nos permitan hacer el estudio del comportamiento del sector de neutrinos del modelo, para poder compararlo con las observaciones.
 
-Para el caso de modelos con ruptura de paridad $R$ del tipo $\lambda$ y carga $n\ge 0$ debemos encontrar una forma analítica que nos permita predecir el tamaño de los acoplamientos, y entonces establecer observables para el LHC que sean independientes del valor específico de $n$ y que nos permitan hacer predicciones que sean compatibles con las hipótesis de la simetría horizontal usada. Así mismo deberemos determinar la carga fraccionaria más óptima de los nuevos flavones que nos permita explicar de la mejor forma posible los resultados experimentales de oscilaciones de neutrinos.
+Para el caso de modelos con ruptura de paridad $R$ del tipo $\lambda$ y carga $n\ge 0$ debemos encontrar una forma analítica que nos permita predecir el tamaño de los acoplamientos, y entonces establecer observables para el LHC que sean independientes del valor específico de $n$ y que nos permitan hacer predicciones que sean compatibles con las hipótesis de la simetría horizontal usada. Así mismo deberemos determinar la carga fraccionaria más óptima de los nuevos flavones que nos permita explicar de la mejor forma posible los resultados experimentales de oscilaciones de neutrinos y de materia oscura.
 
 
 %%% Local Variables: 
