--- a/Planteamiento_del_Problema.tex
+++ b/Planteamiento_del_Problema.tex
@@ -15,25 +15,23 @@
  CODI: ¿Es la teoría actualizada y acertada con respecto al problema que se va a estudiar? ¿Su formulación es coherente? ¿Es clara la perspectiva teórica desde donde se ubica el problema?
 \end{instrucciones}
 
-Con la entrada en operación del LHC, se espera descubrir señales de materia oscura y de modelos que tengan algún mecanismo radiactivo para generar masas de neutrinos.
-Por otro lado, los recientes datos reportados por las colaboraciones PAMELA y Fermi han impuesto restricciones muy fuertes sobre el flujo de rayos cósmicos provenientes de partículas de materia oscura. Los futuros experimentos de rayos cósmicos, tales como el experimento AMS-02, Planck, IceCube, etc, esperan mejorar la sensibilidad a este tipo de señales. Así mismo, los experimentos de detección directa de materia oscura como DAMA, CDMS, CoGeNT, XENON han creado grandes expectativas por los resultados presentes y los que se esperan obtener en los próximos meses. Los experimentos de física de neutrinos y de radiación cósmica de fondo han entrado ya en una era de medidas de precisión.
+El problema que queremos abordar trata acerca de la fenomenología más alla del modelo estándar.
+%Con la entrada en operación del LHC, se espera descubrir señales de materia oscura y de modelos que tengan algún mecanismo radiactivo para generar masas de neutrinos.
+%Por otro lado, los recientes datos reportados por las colaboraciones PAMELA y Fermi han impuesto restricciones muy fuertes sobre el flujo de rayos cósmicos provenientes de partículas de materia oscura. Los futuros experimentos de rayos cósmicos, tales como el experimento AMS-02, Planck, IceCube, etc, esperan mejorar la sensibilidad a este tipo de señales. Así mismo, los experimentos de detección directa de materia oscura como DAMA, CDMS, CoGeNT, XENON han creado grandes expectativas por los resultados presentes y los que se esperan obtener en los próximos meses. Los experimentos de física de neutrinos y de radiación cósmica de fondo han entrado ya en una era de medidas de precisión.
+Ya que con la entrada en operación del LHC más el tevatrón, se esperan descubrir señales del bosón de Higgs, de la materia oscura, dimensiones extra, supersimetría, etc. En algunos modelos más allá del Modelo Estándar se tienen predicciones concretas sobre los posibles productos de aniquilación y desintegración del candidato a materia oscura que podrían ser detectados en estos aceleradores.La mayoría de los experimentos conducidos son hechos en grandes instrumentos llamados detectores. Por ejemplo el LHC tiene 4 detectores. En dos de ellos ATLAS y CMS hay grupos colombianos participando. En los últimos años el Grupo ha tenido una estrecha vinculación con el Grupo de Marta Losada que esta participando en la colaboración ATLAS.
 
-En el LHC junto con el tevatrón, se esperan descubrir señales del bosón de Higgs, de la materia oscura, dimensiones extra, supersimetría, etc. En algunos modelos más allá del Modelo Estándar se tienen predicciones concretas sobre los posibles productos de aniquilación y desintegración del candidato a materia oscura que podrían ser detectados en estos aceleradores.
+ Además se tienen otros experimentos como son las colaboraciones PAMELA y Fermi que han impuesto restricciones muy fuertes sobre el flujo de rayos cósmicos provenientes de partículas de materia oscura. Los futuros experimentos de rayos cósmicos, tales como el experimento AMS-02, Planck, IceCube, etc, esperan mejorar la sensibilidad a este tipo de señales. Así mismo, los experimentos de detección directa de materia oscura como DAMA, CDMS, CoGeNT, XENON han creado grandes expectativas por los resultados presentes y los que se esperan obtener en los próximos meses.
 
-Actualmente se encuentra funcionando el acelerador Tevatron en Fermilab en los Estados Unidos. Este acelera protones y antiprotones a una energía de 1 TeV, y se espera que siga funcionado por 2 años más. Ya ha entrado en funcionamiento el acelerador LHC en el CERN en la frontera entre Francia y Suiza. Aunque de momento se encuentra en estado de pruebas funcionando a energías que alcanzarán los 7TeV, en un futuro cercano éste acelerará protones en ambos sentidos a una energía que alcanzará hasta los 14 TeV. La mayoría de los experimentos conducidos son hechos en grandes instrumentos llamados detectores. Por ejemplo el LHC tiene 4 detectores. En dos de ellos ATLAS y CMS hay grupos colombianos participando. En los últimos años el Grupo ha tenido una estrecha vinculación con el Grupo de Marta Losada que esta participando en la colaboración ATLAS.
+%Actualmente se encuentra funcionando el acelerador Tevatron en Fermilab en los Estados Unidos. Este acelera protones y antiprotones a una energía de 1 TeV, y se espera que siga funcionado por 2 años más. Ya ha entrado en funcionamiento el acelerador LHC en el CERN en la frontera entre Francia y Suiza. Aunque de momento se encuentra en estado de pruebas funcionando a energías que alcanzarán los 7TeV, en un futuro cercano éste acelerará protones en ambos sentidos a una energía que alcanzará hasta los 14 TeV. La mayoría de los experimentos conducidos son hechos en grandes instrumentos llamados detectores. Por ejemplo el LHC tiene 4 detectores. En dos de ellos ATLAS y CMS hay grupos colombianos participando. En los últimos años el Grupo ha tenido una estrecha vinculación con el Grupo de Marta Losada que esta participando en la colaboración ATLAS.
 
-A nivel de detección de radiación cósmica tenemos el satélite PAMELA para detección de rayos cósmicos de electrones, positrones, antiprotones, y núcleos livianos. En agosto del año pasado PAMELA reporto una abundancia anómala de positrones %\cite{pamela}, 
-que ha dado lugar a un sinnúmero de publicaciones tratando de explicar su origen.  Fermi-LAT es otro satélite para la detección de rayos cósmicos que también estará funcionando durante los próximos años. En sus primeras medidas %\cite{fermi} 
-también ha reportado una abundancia anómala de positrones y electrones. El detector de rayos cósmicos AMS-02~%\cite{ams:2009},  
-que será instalado en la Estación Espacial internacional, medirá el espectro de antiprotones y positrones en un rango de energía mucho más amplio y con una estadística mucho mejor. Análogamente está el satélite Planck que fue lanzado en mayo, y desde julio se encuentra en pleno funcionamiento. Con los datos obtenidos de este experimento se espera medir la radiación cósmica de fondo con mucha más precisión que su antecesor WMAP. Además esta el experimento Auger en Argentina que detecta rayos cósmicos de ultra alta energía que alcanzan a llegar a la superficie terrestre.
+%A nivel de detección de radiación cósmica tenemos el satélite PAMELA para detección de rayos cósmicos de electrones, positrones, antiprotones, y núcleos livianos. En agosto del año pasado PAMELA reporto una abundancia anómala de positrones %\cite{pamela}, 
+%que ha dado lugar a un sinnúmero de publicaciones tratando de explicar su origen.  Fermi-LAT es otro satélite para la detección de rayos cósmicos que también estará funcionando durante los próximos años. En sus primeras medidas %\cite{fermi} 
+%también ha reportado una abundancia anómala de positrones y electrones. El detector de rayos cósmicos AMS-02~%\cite{ams:2009},  
+%que será instalado en la Estación Espacial internacional, medirá el espectro de antiprotones y positrones en un rango de energía mucho más amplio y con una estadística mucho mejor. Análogamente está el satélite Planck que fue lanzado en mayo, y desde julio se encuentra en pleno funcionamiento. Con los datos obtenidos de este experimento se espera medir la radiación cósmica de fondo con mucha más precisión que su antecesor WMAP. Además esta el experimento Auger en Argentina que detecta rayos cósmicos de ultra alta energía que alcanzan a llegar a la superficie terrestre.
 
 Igualmente hay varios experimentos de física de neutrinos en marcha que esperan mejorar los datos actuales de oscilaciones de neutrinos, determinar el ángulo de mezcla $\theta_{13}$, del cual actualmente solo hay cotas, y si este resulta ser diferente de cero, buscar evidencia de violación de CP en el sector de neutrinos, un ingrediente crucial para generar bariogénesis a través de leptogénesis.
 
-Todo esto representa un escenario muy dinámico donde el Grupo debe estar preparado para interpretar cualquier evidencia que resulte del Higgs o nueva física a la luz de los modelos que viene desarrollando.
-
-Otra pregunta que queremos abordar en el presente proyecto es si: 
-¿se podrá establecer en los aceleradores futuros cual es el modelo que
-explica la generación de masas y mezclas para los neutrinos? Aunque se ha encontrado que los neutrinos tienen masas a la escala de
+ Aunque se ha encontrado que los neutrinos tienen masas a la escala de
 sub-eV, no se ha podido establecer cual es el modelo que contiene
 el mecanismo apropiado de generación de masas y mezcla de neutrinos.
 En particular, será muy difícil establecer la naturaleza de los
@@ -44,42 +42,41 @@ elegante y simple, y depende sólo de análisis dimensional para la
 nueva física que se requiere. Los datos actuales de neutrinos
 apuntan a una escala de seesaw del orden $10^{10}$ - $10^{15}$ GeV,
 donde la violación de número leptónico ocurre a través de masas de
-Majorana de los neutrinos derechos. Con una escala tan alta, lo
+Majorana de los neutrinos derechos. Con una escala tan alta, los
 efectos de violación de sabor leptónico en procesos diferentes a la
-oscilación de neutrinos son extremadamente pequeños. Por ejemplo el
-decaimiento del muon a electrón fotón en extensiones seesaw del Modelo
-Estándar, es decenas de ordenes de magnitud menor a la cota actual. Una alternativa al mecanismo seesaw que también explica naturalmente
+oscilación de neutrinos son extremadamente pequeños. Una alternativa al mecanismo seesaw que también explica naturalmente
 la pequeñez de la masa de neutrinos son los mecanismos de generación
 radiativa.
 %\cite{hep-ph/0503059,AristizabalSierra:2006ri,Babu:2002uu,Dong:2006vk}.
-En este aproximación las masas de neutrinos son cero a nivel árbol y
-son inducidas únicamente como correcciones radiativas finitas. Estas
-correcciones radiativas son proporcionales a la raíz cuadrada de
-las masas del leptón cargado (o quark) dividas por la escala de nueva
-física $\Lambda$. Las masas de los neutrinos pueden estar en el rango
-de sub-eV aún cuando la escala de nueva física sea del orden de
-TeV. En este caso, los procesos de violación de número leptónico en
-otros procesos diferentes a la física de neutrinos pueden llegar
-a ser accesibles a los aceleradores.
-
+%En este aproximación las masas de neutrinos son cero a nivel árbol y
+%son inducidas únicamente como correcciones radiativas finitas.
+% Estas correcciones radiativas son proporcionales a la raíz cuadrada de
+%las masas del leptón cargado (o quark) dividas por la escala de nueva
+%física $\Lambda$. Las masas de los neutrinos pueden estar en el rango
+%de sub-eV aún cuando la escala de nueva física sea del orden de
+%TeV. En este caso, los procesos de violación de número leptónico en
+%otros procesos diferentes a la física de neutrinos pueden llegar
+%a ser accesibles a los aceleradores.
 En este proyecto proponemos analizar en detalle las consecuencias
 experimentales de modelos específicos donde las masas de
-neutrinos se generan radiativamente. En particular estamos interesados
-en calcular los decaimientos de las partículas del modelo que
-estén controlados por los mismos parámetros que inducen las masas y
-las mezclas de los neutrinos. Estos decaimientos podrían no sólo
-ayudar a determinar el mecanismo de generación de masas de neutrinos
-con aceleradores de partículas, sino también ayudar a determinar
-experimentalmente los parámetros del modelo que aparecen en la matriz
-de masa de neutrinos.
+neutrinos se generan radiativamente.
+% En particular estamos interesados
+%en calcular los decaimientos de las partículas del modelo que
+%estén controlados por los mismos parámetros que inducen las masas y
+%las mezclas de los neutrinos. Estos decaimientos podrían no sólo
+%ayudar a determinar el mecanismo de generación de masas de neutrinos
+%con aceleradores de partículas, sino también ayudar a determinar
+%experimentalmente los parámetros del modelo que aparecen en la matriz
+%de masa de neutrinos.
 
-En modelos supersimétricos con violación de paridad R 
-extendidos con una simetría horizontal $U(1)_H$ donde el neutralino decae rápidamente vía operadores 
-que violan número bariónico, se tendrían predicciones concretas sobre la generación de masas de neutrinos y sobre los posibles productos de 
-desintegración del neutralino que podrían ser detectados en el LHC o tevatrón.
+Con lo expuesto anteriormente, las preguntas que queremos abordar en el presente proyecto son: 
+¿se podrá establecer en los aceleradores futuros cual es el modelo que
+explica la generación de masas y mezclas para los neutrinos? ¿Cuáles serían las restricciones 
+impuestas por los recientes y futuros datos astrofísicos y de aceleradores sobre los modelos supersimétricos con violación de paridad R extendidos con una simetría $U(1)_H$ que presentan un neutralino ó gravitino inestable? Y ¿Cuáles serían las restricciones impuestas por los recientes y futuros datos de todos estos experimentos sobre  modelos que presenten una partícula candidata a materia oscura?
+Todo esto representa un escenario muy dinámico donde el Grupo debe estar preparado para interpretar cualquier evidencia que resulte del Higgs o nueva física a la luz de los modelos que viene desarrollando.
 
-Finalmente, otras preguntas que proponemos y que se trataran de responder en el proyecto son: ¿Cuáles serían las restricciones 
-impuestas por los recientes y futuros datos astrofísicos y de aceleradores sobre los modelos supersimétricos con violación de paridad R extendidos con una simetría $U(1)_H$ que presentan un neutralino inestable? Y ¿Cuáles serían las restricciones impuestas por los recientes y futuros datos de todos estos experimentos sobre  modelos que presenten una partícula candidata a materia oscura o que generen masas para los neutrinos?
+
+
 
 \textbf{Comentar sobre la linea de rayos gamma \cite{1011.3786}}
 \subsection{Planteamiento del problema}
@@ -101,23 +98,22 @@ De las diferentes posibilidades se pueden construir modelos con
 \label{item:1}
 \item Modelos donde la simetría discreta de conservación de $R$--paridad, o una simetría equivalente, queda como remanente de la ruptura espontánea de la simetría $U(1)_H$ \cite{Dreiner:2003hw,Dreiner:2003yr,Dreiner:2007vp}. Las masas y mezclas de neutrinos se pueden explicar con la introducción de neutrinos derechos de carga $H$ fraccionaria.
 \label{item:2}
-\item Modelos con violación de número leptónico a través de términos trilineales con ruptura de $R$--paridad. Se pueden construir modelos con hasta dos términos del tipo $\lambda_{ijk}$, con los tres índices diferentes \cite{Sierra:2009zq}.  En este caso las cargas $H$ se pueden escoger de manera que los acoplamientos trilineales que violan $R$--paridad queden muy suprimidos, del orden de $10^{-23}$, de modo que los neutralinos pueden ser candidatos a materia oscura inestables con un tiempo de vida media del orden de $10^{26}\,$~sec. Dichos modelos se pueden usar para explicar las anomalías en rayos cósmicos \cite{Sierra:2009zq} recientemente detectadas por experimentos como PAMELA \cite{Adriani:2008zr}, ATIC \cite{:2008zzr} y Fermi~LAT \cite{Abdo:2009zk}. Estos datos sugieren que el decaimiento del neutralino sea principalmente leptónico, lo cual hace especialmente interesante que la única posibilidad consistente con simetrías horizontales de lugar precisamente a decaimientos leptónicos.
+\item Modelos con violación de número leptónico a través de términos trilineales con ruptura de $R$--paridad. Se pueden construir modelos con hasta dos términos del tipo $\lambda_{ijk}$, con los tres índices diferentes \cite{Sierra:2009zq}.  En este caso las cargas $H$ se pueden escoger de manera que los acoplamientos trilineales que violan $R$--paridad queden muy suprimidos, del orden de $10^{-23}$, de modo que los neutralinos o gravitinos pueden ser candidatos a materia oscura inestables con un tiempo de vida media del orden de $10^{26}\,$~sec. Dichos modelos se pueden usar para explicar las anomalías en rayos cósmicos \cite{Sierra:2009zq} recientemente detectadas por experimentos como PAMELA \cite{Adriani:2008zr}, ATIC \cite{:2008zzr} y Fermi~LAT \cite{Abdo:2009zk}. Estos datos sugieren que el decaimiento del neutralino sea principalmente leptónico, lo cual hace especialmente interesante que la única posibilidad consistente con simetrías horizontales de lugar precisamente a decaimientos leptónicos.
 \label{item:3}
 \item Modelos con violación de número bariónico a través de términos trilineales que violan $R$--paridad del tipo $\lambda''_{ijk}$. La fenomenología de este tipo de modelos aún no ha sido estudiada en la literatura
 \label{item:4}
 \end{enumerate}
-En este proyecto pretendemos estudiar de manera sistemática la fenomenología de los modelos \ref{item:3}., \ref{item:4}. a luz de los resultados experimentales presentes y futuros.
+%En este proyecto pretendemos estudiar de manera sistemática la fenomenología de los modelos \ref{item:3}., \ref{item:4}. a luz de los resultados experimentales presentes y futuros.
 
-En el caso \ref{item:3}., en lugar de asumir que los términos trilineales pueden explicar las anomalías de rayos cósmicos, se puede asumir que estas anomalías tienen un origen astrofísico, e intentar usar los datos presentes para restringir los posibles tiempo de vida media y masa del neutralino. En esta línea, también se planea estudiar las predicciones de modelos específicos de materia oscura inestable para los experimentos de rayos cósmicos en marcha, y los que comenzarán a funcionar en un futuro cercano. En particular queremos  investigar el flujo de los rayos gamma que generan en modelos donde la materia oscura decae leptónica o hadrónicamente (caso \ref{item:3}) y determinar las regiones del espacio de parámetros que puedan ser confrontadas con las medidas de rayos gamma que se esperan de Fermi--LAT en los próximos meses.
+%En el caso \ref{item:3}., en lugar de asumir que los términos trilineales pueden explicar las anomalías de rayos cósmicos, se puede asumir que estas anomalías tienen un origen astrofísico, e intentar usar los datos presentes para restringir los posibles tiempo de vida media y masa del neutralino o gravitino. En esta línea, también se planea estudiar las predicciones de modelos específicos de materia oscura inestable para los experimentos de rayos cósmicos en marcha, y los que comenzarán a funcionar en un futuro cercano. En particular queremos  investigar el flujo de los rayos gamma que generan en modelos donde la materia oscura decae leptónica o hadrónicamente (caso \ref{item:3}) y determinar las regiones del espacio de parámetros que puedan ser confrontadas con las medidas de rayos gamma que se esperan de Fermi--LAT en los próximos meses.
 
-En el caso \ref{item:3}, en este proyecto pretendemos investigar posibles predicciones de señales para el LHC en modelos donde la simetría horizontal se use para formular modelos consistentes de violación de número leptónico a través de términos trilineales de ruputura $R$--paridad de tipo $\lambda$. Después de tener en cuenta las restricciones experimentales sobre acoplamientos individuales
+%En el caso \ref{item:3}, en este proyecto pretendemos investigar posibles predicciones de señales para el LHC en modelos donde la simetría horizontal se use para formular modelos consistentes de violación de número leptónico a través de términos trilineales de ruputura $R$--paridad de tipo $\lambda$. Después de tener en cuenta las restricciones experimentales sobre acoplamientos individuales
 %, de las cuales la más importante es \cite{Barbier:2004ez}
 %\begin{align}
 %   \lambda_{11k}''<  10^{-9}   \left( \frac{m_{\tilde g}}{100\,\text{GeV}}  \right)^{1/2}
 %\left( \frac{m_{\tilde q_k}}{100\,\text{GeV}}  \right)^2
 %\end{align}
-esperamos tener una predicción muy concreta para la jerarquía en los acoplamientos $\lambda$, la cual podría dar lugar a señales muy específicas en el LHC. De este modo, en caso de que se descubriera en el LHC un modelo de ruptura de $R$--paridad a través términos $\lambda$, se podría determinar si la simetría Abeliana  $U(1)_H$ con uno ó más flavones es la simetría que explica la jerarquía en la masas de los fermiones.
-
+%esperamos tener una predicción muy concreta para la jerarquía en los acoplamientos $\lambda$, la cual podría dar lugar a señales muy específicas en el LHC. De este modo, en caso de que se descubriera en el LHC un modelo de ruptura de $R$--paridad a través términos $\lambda$, se podría determinar si la simetría Abeliana  $U(1)_H$ con uno ó más flavones es la simetría que explica la jerarquía en la masas de los fermiones.
 En el modelo usual para violación de número leptónico a través de términos $\lambda$, donde se impone una simetría discreta del tipo paridad leptónica, los términos no renormalizables asociados a la masa del neutrino quedan prohibidos, por lo que el mecanismo seesaw no puede ser implementado. En el caso de que la simetría horizontal se use para formular un modelo de este tipo, se puede introducir un nuevo flavón con carga $H$ fraccionaria [del tipo usado en \cite{Chen:2008tc}] que puede dar lugar a un mecanismo de seesaw apropiado para explicar los datos de oscilaciones de neutrinos. En este proyecto pretendemos explorar la posibilidad de obtener una ttextura para las masa de los neutrinos en base a un modelo supersimétrico a la Froggatt-Nielsen, y además obtener un candidato consistente para materia oscura.
 
 \begin{ideas}
