--- a/Objetivos.tex
+++ b/Objetivos.tex
@@ -1,29 +1,30 @@
 \section{ Objetivos del Proyecto }
 
-Proponer modelos que tengan consecuencias medibles en experimentos de aceleradores, de rayos cósmicos, y de detección directa de materia oscura, así como encontrar modelos que expliquen los resultados que puedan ser obtenidos en cualquiera de ellos. En modelos específicos para la generación radiativa de masas de neutrinos, establecer si la matriz de masa de neutrinos resultante puede llegar a ser reconstruida en el LHC. Se considerarán especialmente modelos que a su vez contengan candidatos de materia oscura [1,2]. Para algunos modelos específicos que posean un candidato a materia oscura, estudiar de manera sistemática la fenomenología de estos modelos a luz de los resultados experimentales presentes y futuros. Para este tipo de modelos, establecer cuáles son las restricciones sobre el espacio de parámetros, impuestos por los aceleradores, y por los actuales y futuros experimentos de rayos cósmicos. Se considerarán modelos de violación de paridad R con el neutralino [3] o gravitino [4] como candidatos a materia oscura inestable (CMOI), además del seesaw radiativo [2]. Dichos modelos serán implementados en el paquete computacional Micromegas [5] para establecer las regiones del espacio de parámetros donde se obtiene la densidad de reliquia apropiada y las regiones donde se esperan señales observables en los experimentos de detección directa de materia oscura. 
+Proponer modelos más alla del modelo estándar que tengan consecuencias medibles en experimentos de aceleradores, de rayos cósmicos, y de detección directa de materia oscura, así como encontrar modelos que expliquen los resultados que puedan ser obtenidos en cualquiera de ellos.
+
+ En modelos específicos para la generación radiativa de masas de neutrinos, establecer si la matriz de masa de neutrinos resultante puede llegar a ser reconstruida en el LHC. Se considerarán especialmente modelos que a su vez contengan candidatos de materia oscura [1,2].  Se considerarán modelos de violación de paridad R con el neutralino [3] o gravitino [4] como candidatos a materia oscura inestable (CMOI), además del seesaw radiativo [2]. 
 
  Se considerarán modelos de supersimetría con Violación Bilineal de Paridad R (VBPR), el modelo de Zee para generación radiativa de masas
 de neutrinos a un loop, el modelo de Babu para generación radiativa de
-masas de neutrinos a dos loops, y modelos 3-3-1 con neutrinos
-derechos.
+masas de neutrinos a dos loops.
 
-Se analizaran las restricciones astrofísicas y de aceleradores sobre los modelos supersimétricos con violación de paridad R extendidos con una simetría $U(1)_H$ que presentan un neutralino inestable.
+%Se analizaran las restricciones astrofísicas y de aceleradores sobre los modelos supersimétricos con violación de paridad R extendidos con una simetría $U(1)_H$ que presentan un neutralino inestable.
 
-Para el modelo supersimétrico con violación bilineal de paridad R (VBPR) [1],  establecer a través de la simulación de eventos con neutralinos en el LHC, con que nivel de precisión se pueden llegar a medir las correlaciones establecidas entre señales de neutralinos y diferentes observables de física de neutrinos.
+%Para el modelo supersimétrico con violación bilineal de paridad R (VBPR) [1],  establecer a través de la simulación de eventos con neutralinos en el LHC, con que nivel de precisión se pueden llegar a medir las correlaciones establecidas entre señales de neutralinos y diferentes observables de física de neutrinos.
 
 Calcular el flujo de rayos gamas y confrontarlo con lo observado en experimentos de rayos cósmicos en modelos supersimétricos donde el gravitino es el candidato de materia oscura inestable (CMOI) en la región de masa de hasta 80 GeV. Estudios recientes  muestran que en está región son importantes canales de decaimiento que no se habían considerado previamente [4]. 
 
 Explicar los resultados de PAMELA y ATIC en modelos supersimétricos con violación trilineal de paridad R (VTPR) y una simetría horizontal con un mecanismo see-saw para la generación de masas de neutrinos y con el gravitino como CMOI.
 
-Determinar las regiones del espacio de parámetros compatible con física de neutrinos y con la densidad de materia oscura del seesaw radiativo, para estudiar sus implicaciones experimentales.
+%Determinar las regiones del espacio de parámetros compatible con física de neutrinos y con la densidad de materia oscura del seesaw radiativo, para estudiar sus implicaciones experimentales.
 
-Continuar con el estudio sistemático [6] de modelos 3-3-1 de tres y cuatro familias.
+%Continuar con el estudio sistemático [6] de modelos 3-3-1 de tres y cuatro familias.
 
-En el modelo de seesaw radiativo, determinar la jerarquía de masas de las partículas impares del sector de parámetros compatible con observaciones de WMAP y neutrinos. Estudiar los posibles canales visibles en el LHC que involucren materia oscura del modelo, y analizar el flujo de rayos gamma producto de la aniquilación de materia oscura en la galaxia, en el modelo de seesaw radiativo.
+%En el modelo de seesaw radiativo, determinar la jerarquía de masas de las partículas impares del sector de parámetros compatible con observaciones de WMAP y neutrinos. Estudiar los posibles canales visibles en el LHC que involucren materia oscura del modelo, y analizar el flujo de rayos gamma producto de la aniquilación de materia oscura en la galaxia, en el modelo de seesaw radiativo.
 
-Obtener las restricciones que los diferentes experimentos de rayos cósmicos 
-presentes y futuros imponen sobre la vida media y la masa del neutralino y del gravitino como 
-candidato a materia oscura que decae, en modelos que violan paridad R.
+%Obtener las restricciones que los diferentes experimentos de rayos cósmicos 
+%presentes y futuros imponen sobre la vida media y la masa del neutralino y del gravitino como 
+%candidato a materia oscura que decae, en modelos que violan paridad R.
 
  Calcular las implicaciones en aceleradores de modelos con violación 
 de número leptónico a través de términos trilineales $\lambda$ inducidos por la simetría 
