--- a/Resultados.tex
+++ b/Resultados.tex
@@ -1,21 +1,21 @@
 \section{ Resultados Esperados }
 
-Determinación de la factibilidad del LHC para determinar las correlaciones de VBPR entre el cociente de branchings de neutralino a W mu y W tau con el ángulo de mezcla atmosférico de neutrinos, así como de la correlación entre la longitud de decaimiento del neutralino y la diferencia de masa al cuadrado atmosférica.
+%Determinación de la factibilidad del LHC para determinar las correlaciones de VBPR entre el cociente de branchings de neutralino a W mu y W tau con el ángulo de mezcla atmosférico de neutrinos, así como de la correlación entre la longitud de decaimiento del neutralino y la diferencia de masa al cuadrado atmosférica.
 
-Determinación del flujo de rayos gamas y su confrontación con lo observado en experimentos de rayos cósmicos en modelos supersimétricos donde el gravitino es el CMOI con masa de hasta 80 GeV. 
+Determinación del flujo de rayos gamas y su confrontación con lo observado en experimentos de rayos cósmicos en modelos supersimétricos donde el gravitino es el CMOI.
 
 Determinación de acoplamientos, vida media y masa del gravitino como CMOI en modelos de ruptura trilineal de paridad R (RTPR) con violación de número leptónico, que pueda explicar el exceso de positrones en rayos cósmicos. Predicciones de flujo de positrones y rayos gama del modelo para experimentos futuros de rayos cósmicos. 
 
-Determinación de las restricciones que los diferentes experimentos de rayos cósmicos 
-presentes y futuros que se imponen sobre el neutralino como CMOI. 
+%Determinación de las restricciones que los diferentes experimentos de rayos cósmicos 
+%presentes y futuros que se imponen sobre el neutralino como CMOI. 
 
-Determinación de las señales en el LHC para 1) Modelos de RTPR con violación de número bariónico y mecanismo see-saw para masas de neutrinos, inducida por una simetría Abeliana anómala U(1). 2) Regiones del espacio de parámetros compatible con física de neutrinos y densidad de materia oscura del seesaw radiativo. 3) Modelos 3-3-1 con cuatro familias
+Determinación de las señales en el LHC para 1) Modelos de RTPR con violación de número bariónico y mecanismo see-saw para masas de neutrinos, inducida por una simetría Abeliana anómala U(1). 2) Regiones del espacio de parámetros compatible con física de neutrinos y densidad de materia oscura del seesaw radiativo.
 
- Obtener algunos canales visibles que involucren materia oscura en el LHC, y predecir el flujo de rayos gamma en la galaxia producto de la aniquilacion de materia oscura.
+% Obtener algunos canales visibles que involucren materia oscura en el LHC, y predecir el flujo de rayos gamma en la galaxia producto de la aniquilacion de materia oscura.
 
-De otro lado, esperamos construir el primer modelo estándar supersimétrico con una simetría horizontal anómala $U(1)_H$ que se pueda constrastar directamente con resultados experimentales de aceleradores. Así mismo como formular el primer modelo con violación de número leptónico a través de términos $\lambda$ que a la vez de cuenta de las masas y mezclas de neutrinos.
+%De otro lado, esperamos construir el primer modelo estándar supersimétrico con una simetría horizontal anómala $U(1)_H$ que se pueda constrastar directamente con resultados experimentales de aceleradores. Así mismo como formular el primer modelo con violación de número leptónico a través de términos $\lambda$ que a la vez de cuenta de las masas y mezclas de neutrinos.
 
-En conclusión esperemos obtener predicciones específicas para modelos supersimétricos con contenido mínimo de partículas y una simetría horizontal anómala $U(1)_H$ que puedan comprobarse directamente en experimentos de rayos cósmicos o de aceleradores de partículas.
+Esperemos obtener predicciones específicas para modelos supersimétricos con contenido mínimo de partículas y una simetría horizontal anómala $U(1)_H$ que puedan comprobarse directamente en experimentos de rayos cósmicos o de aceleradores de partículas.
 
 Formación 1 estudiante de maestría y 1 de doctorado.
 
