from include to input and old project files

--- a/Ficha-2011_bsm.tex
+++ b/Ficha-2011_bsm.tex
@@ -206,23 +206,13 @@ La ficha técnica es el resumen del proyecto, con una extensión máxima de seis
 \end{instrucciones}
 
 
-\include{Planteamiento_del_Problema}
-\include{Objetivos}
-\include{Metodologia}
-\include{Resultados}
-\include{Cronograma}
-\include{Compromisos}
-\include{Estudiantes}
-
-
-
-
-
-
-
-
-
-
+\input{Planteamiento_del_Problema}
+\input{Objetivos}
+\input{Metodologia}
+\input{Resultados}
+\input{Cronograma}
+\input{Compromisos}
+\input{Estudiantes}
 
 
 
