--- a/Objetivos.tex
+++ b/Objetivos.tex
@@ -4,9 +4,7 @@ Proponer modelos más alla del modelo estándar que tengan consecuencias medible
 
  En modelos específicos para la generación radiativa de masas de neutrinos, establecer si la matriz de masa de neutrinos resultante puede llegar a ser reconstruida en el LHC. Se considerarán especialmente modelos que a su vez contengan candidatos de materia oscura [1,2].  Se considerarán modelos de violación de paridad R con el neutralino [3] o gravitino [4] como candidatos a materia oscura inestable (CMOI), además del seesaw radiativo [2]. 
 
- Se considerarán modelos de supersimetría con Violación Bilineal de Paridad R (VBPR), el modelo de Zee para generación radiativa de masas
-de neutrinos a un loop, el modelo de Babu para generación radiativa de
-masas de neutrinos a dos loops.
+ Se considerarán modelos de supersimetría con Violación Bilineal de Paridad R (VBPR), 
 
 %Se analizaran las restricciones astrofísicas y de aceleradores sobre los modelos supersimétricos con violación de paridad R extendidos con una simetría $U(1)_H$ que presentan un neutralino inestable.
 
