--- a/proyecto_old/Justificacion.tex
+++ b/proyecto_old/Justificacion.tex
@@ -55,6 +55,8 @@ La enorme actividad experimental actual en física de partículas intenta determ
 
 El presente proyecto se centra en proponer modelos que tengan consecuencias medibles en todos estos experimentos, y encontrar modelos que expliquen los resultados de cualquiera de ellos. Pretendemos establecer observables que no sólo permitan descubrir [1] sino también  comprobar si el VBPR es el mecanismo de generación de masas de neutrinos, así como estudiar las implicaciones de modelos con un candidato de materia oscura. 
 
+\begin{ideas}
+  \newpage{}
 %Oscar
 En los últimos meses varias colaboraciones han publicado los resultados de las medidas del flujo de rayos cósmicos, reportando un exceso de electrones y positrones, y ningún exceso en el flujo de antiprotones y fotones. 
 La comunidad científica ha dedicado un esfuerzo enorme en tratar de dar explicación al exceso en el flujo de rayos cósmicos. Básicamente se han manejado dos propuestas: interpretar el exceso como el producto de la desintegración o aniquilación de partículas de materia oscura en nuestra galaxia; o interpretar el exceso en términos de la producción de positrones y electrones por fuentes astrofísicas exóticas. 
@@ -319,7 +321,7 @@ GFIF bajo la dirección del profesor William Ponce. Despues de
 graduarse ha mantenido una colaboración muy estrecha con el Grupo de
 la Universidad de Antioquia especialmente realizando trabajos
 conjuntos sobre modelos 3-3-1
-
+\end{ideas}
 	
 
 %%% Local Variables: 
